--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/OwnCloud"
         >
+        <!-- Apps -->
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
             android:label="@string/app_name" >
@@ -58,6 +59,25 @@
             android:label="@string/menu_about"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity" >
         </activity>
-    </application>
 
+        <!-- Widget -->
+
+        <receiver android:name="it.niedermann.owncloud.notes.android.widget.SingleNoteWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/single_note_widget_provider_info" />
+        </receiver>
+
+        <activity
+            android:name="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity"
+            android:label="@string/action_select_note">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
