--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
     package="it.niedermann.owncloud.notes"
-    android:versionCode="3"
-    android:versionName="0.3.0">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="4"
+    android:versionName="0.4.0">
 
     <uses-sdk
         android:minSdkVersion="11"
