--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SettingsActivity"
             android:label="@string/app_name"
-            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity" >
+            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
+            android:windowSoftInputMode="stateVisible">
         </activity>
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.CreateNoteActivity"
