--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
     package="it.niedermann.owncloud.notes"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="4"
-    android:versionName="0.4.0">
+    android:versionCode="5"
+    android:versionName="0.5.0">
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -64,7 +64,7 @@
 
         <!-- All Notes Widget -->
 
-        <receiver
+        <!--receiver
             android:name="it.niedermann.owncloud.notes.android.widget.AllNotesWidget"
             android:label="@string/widget_all_notes_title">
             <intent-filter>
@@ -75,11 +75,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/all_notes_widget_provider_info" />
         </receiver>
-        <service android:name=".android.widget.AllNotesWidget$StackWidgetService" />
+        <service android:name=".android.widget.AllNotesWidget$StackWidgetService" /-->
 
         <!-- Single Note Widget -->
 
-        <receiver
+        <!--receiver
             android:name="it.niedermann.owncloud.notes.android.widget.SingleNoteWidget"
             android:label="@string/widget_single_note_title">
             <intent-filter>
@@ -97,6 +97,6 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
-        </activity>
+        </activity-->
     </application>
 </manifest>
