--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.NoteActivity"
             android:label="@string/app_name"
-            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"></activity>
+            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.EditNoteActivity"></activity>
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SettingsActivity"
             android:label="@string/app_name"
@@ -58,7 +58,8 @@
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.EditNoteActivity"
             android:label="@string/menu_edit"
-            android:windowSoftInputMode="stateVisible"></activity>
+            android:windowSoftInputMode="stateVisible"
+            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"></activity>
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.AboutActivity"
             android:label="@string/menu_about"
