--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:fullBackupContent="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/OwnCloud">
+        android:supportsRtl="true"
+        android:theme="@style/Nextcloud">
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
