--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:fullBackupContent="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
         android:theme="@style/OwnCloud">
 
         <activity
@@ -31,6 +31,8 @@
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity" />
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
 
         <activity
@@ -49,7 +51,8 @@
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.CreateNoteActivity"
             android:label="@string/action_create"
-            android:windowSoftInputMode="stateVisible">
+            android:windowSoftInputMode="stateVisible"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
