--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 }
 
 dependencies {
+    compile project(':cert4android')
+
     compile 'com.yydcdut:rxmarkdown:0.1.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
