--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,12 @@
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SettingsActivity"
             android:label="@string/app_name"
-            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
+            android:windowSoftInputMode="stateVisible"
+            />
+
+        <activity
+            android:name="it.niedermann.owncloud.notes.android.activity.PreferencesActivity"
+            android:label="@string/app_name"
             android:windowSoftInputMode="stateVisible"
             />
 
