--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,5 +82,16 @@
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
             />
 
+        <receiver   android:name=".android.activity.CreateNoteWidget"
+            android:label="@string/widget_create_note">
+
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/create_note_widget_provider" />
+        </receiver>
     </application>
 </manifest>
