--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
         </activity>
 
         <activity
+            android:name="it.niedermann.owncloud.notes.android.activity.NoteActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.EditNoteActivity"
+            />
+
+        <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SettingsActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateVisible"
@@ -68,6 +74,7 @@
             android:label="@string/menu_edit"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
             android:windowSoftInputMode="stateVisible"
+            android:launchMode="singleTask"
             />
 
         <activity
@@ -76,7 +83,8 @@
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
             />
 
-        <receiver   android:name=".android.activity.CreateNoteWidget"
+        <receiver
+            android:name=".android.activity.CreateNoteWidget"
             android:label="@string/widget_create_note">
 
             <intent-filter>
@@ -87,5 +95,27 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/create_note_widget_provider" />
         </receiver>
+
+        <receiver
+            android:id="@+id/SingleNoteWidget"
+            android:name="it.niedermann.owncloud.notes.android.activity.SingleNoteWidget"
+            android:label="@string/widget_single_note_title">
+
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/single_note_widget_provider_info" />
+        </receiver>
+
+        <activity
+            android:name="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity">
+
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
