--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/OwnCloud">
+        android:theme="@style/AppTheme">
+
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SplashscreenActivity"
             android:theme="@style/SplashTheme">
@@ -21,9 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -78,8 +82,9 @@
             />
 
         <activity
-            android:name="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity">
-
+            android:name=".android.activity.SelectSingleNoteActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
             </intent-filter>
