--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Nextcloud.NoActionBar">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
