--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         apply plugin: 'maven'
@@ -16,5 +17,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
