--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ jdk: oraclejdk8
 android:
   components:
     - tools
-    - build-tools-26.0.2
-    - android-26
+    - build-tools-27.0.3
+    - android-27
     - extra-android-m2repository
+
+before_install:
+    - yes | sdkmanager "platforms;android-27"
 
 script: ./gradlew testDebug
