--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,13 +45,14 @@
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SettingsActivity"
-            android:label="@string/app_name"
+            android:label="@string/settings_server_settings"
+            android:parentActivityName="it.niedermann.owncloud.notes.android.activity.PreferencesActivity"
             android:windowSoftInputMode="stateVisible"
             />
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.PreferencesActivity"
-            android:label="@string/app_name"
+            android:label="@string/action_settings"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
             android:windowSoftInputMode="stateHidden"
             />
