--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,15 @@ android {
 }
 
 dependencies {
-    compile project(':cert4android')
+    implementation project(':cert4android')
 
     compile 'com.yydcdut:rxmarkdown:0.1.1-beta'
 
-    def supportLibVersion = '27.1.0'
-    compile "com.android.support:support-v4:${supportLibVersion}"
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-    compile "com.android.support:design:${supportLibVersion}"
-    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-    compile "com.android.support:cardview-v7:${supportLibVersion}" // needed for cert4android (conflict resolution)
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    def supportLibVersion = '27.1.1'
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}" // needed for cert4android (conflict resolution)
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
