--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     implementation project(':cert4android')
 
-    compile 'com.yydcdut:rxmarkdown:0.1.1-beta'
+    implementation 'com.yydcdut:rxmarkdown:0.1.1-beta'
 
     def supportLibVersion = '27.1.1'
     implementation "com.android.support:support-v4:${supportLibVersion}"
