--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "it.niedermann.owncloud.notes"
         minSdkVersion 14
@@ -31,13 +36,12 @@ dependencies {
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:9.0.0-rc3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc3'
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    // needed for cert4android (conflict resolution)
-    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "com.google.android.material:material:1.0.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
