--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
 
-    implementation 'com.jakewharton:butterknife:9.0.0-rc3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc3'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
