Add uncaught exception handler

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".android.activity.ExceptionActivity"
+            android:process=":error_activity" />
+
         <receiver
             android:name=".android.appwidget.CreateNoteWidget"
             android:label="@string/widget_create_note">
