--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
 
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
