--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
 dependencies {
     implementation project(':cert4android')
 
+    implementation 'com.github.nextcloud:Android-SingleSignOn:master-SNAPSHOT'
+
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'com.yydcdut:markdown-processor:0.1.3'
