--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.nextcloud:Android-SingleSignOn:master-SNAPSHOT'
+    implementation 'com.github.nextcloud:Android-SingleSignOn:ssoHeaders-SNAPSHOT'
 
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.8'
