--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'androidx.work:work-runtime:2.2.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
