#439 Allow Rendering of any markdown file
Some refactorings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:scheme="content" />
                 <data android:host="*" />
-                <data android:mimeType="*/*" />
+                <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
 
