--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".android.appwidget.NoteListWidgetConfiguration">
+        <activity android:name=".android.activity.NoteListWidgetConfigurationActivity">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
