--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
 }
 
 dependencies {
-    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.0-rc1"
+    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.0-rc2"
+    implementation 'com.github.stefan-niedermann:nextcloud-commons:6250e5fe73'
 
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
