--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation "com.github.nextcloud:Android-SingleSignOn:0.5.0-rc2"
-    implementation 'com.github.stefan-niedermann:nextcloud-commons:6250e5fe73'
+    implementation 'com.github.stefan-niedermann:nextcloud-commons:0.0.1'
 
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
