Only listen to push event
Signed-off-by: stefan-niedermann <info@niedermann.it>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,6 @@
-name: Android Pull Request & Master CI
+name: Android CI
 
-on: [push, pull_request]
+on: push
 jobs:
   test:
     name: Run Unit Tests
