Enable viewbinding in gradle plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
         disable 'MissingTranslation'
         abortOnError false
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
